# BacktestEngine

./: .gitignore  CMakeLists.txt  README.md
scripts/: formatMt5DataFile.py
src/: BarTypes.cpp  DataReader.cpp  Engine.cpp  Main.cpp  PriceSeries.cpp  Timeframe.cpp  main.cpp
src/include/: BarTypes.hpp  DataReader.hpp  Engine.hpp  PriceSeries.hpp  Timeframe.hpp  Utils.hpp
test/: MainTest.cpp
